# INSANE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_comp.sh  build_interception.sh  dpdk_22_11_mods.diff  main.c  nsn_app.c  test.c
apps/: CMakeLists.txt  build.sh  nsn_app_perf.c  nsn_app_rx.c  nsn_app_tx.c
apps/lunar/: CMakeLists.txt  config.c  config.h  lunar.c  lunar.conf  lunar.h  lunar_broker.c  lunar_perftest.c  lunar_pub.c  lunar_pubsub.h  lunar_sub.c  pack.c  pack.h
apps/lunar-streaming/: lunar_s.c  lunar_s.h  recvfile.c  s_client.c  s_server.c  sendfile.c
apps/multi/: egl.h  eglplatform.h  gl.h  glad.c  glad_egl.c  main.c  renderer.c  shader.c
apps/perf/: nsn_app_perf.c
bindings/: app.py  nsn.py  nsn_perf.py
cmake/: FindDPDK.cmake
comparisons/: build.sh  rdma_perf.c  socket_perftest.c  tcpdpdk_perf.c  tcpsock_perf.c  udp-echo.rs  udp-ping-pong.rs  udp-pktgen.rs  udpdpdk_perf.c  udpsock_perf.c  udpxsk_perf.c
configs/: nsn-app.cfg  nsnd.cfg
datapaths/: build.sh  dpdk.c  dpdk_common.h  protocols.h  rdma.c  tcpdpdk.c  tcpsock.c  udpdpdk.c  udpsock.c
docs/: debug.md  libinterception.md  refactoring.txt  rest.md
examples/: CMakeLists.txt  nsn_perf.c  nsn_perf_reliable.c
include/insane/: buffer.h  insane.h  logger.h
include/nsn/: nsn.h
lib/: CMakeLists.txt  appctx.c  appctx.h  arp.c  arp.h  buffer.c  cmsg.h  common.c  common.h  ethernet.h  insane.c  insane_priv.h  ioctx.h  ip.c  ip.h  list.h  logger.c  mapper.c  mapper.h  mem_info.h  mem_manager.c  mem_manager.h  netdev.c  netdev.h  pkt_meta.h  proto_trp.c  proto_trp.h  queue.c  queue.h  route.c  route.h  runtime.h  udp.c  udp.h
scripts/: hugepages.sh  install-dpdk.sh  install-rest.sh  install-tldk.sh  install_deps.sh
src/: nsn.c  nsn.h  nsn_app.c  nsn_app_perf.c  nsn_app_rx.c  nsn_app_tx.c  nsn_arena.c  nsn_arena.h  nsn_config.c  nsn_config.h  nsn_datapath.h  nsn_ipc.h  nsn_log.h  nsn_memory.c  nsn_memory.h  nsn_os.h  nsn_os_linux.c  nsn_platform.h  nsn_ringbuf.c  nsn_ringbuf.h  nsn_shm.c  nsn_shm.h  nsn_string.c  nsn_string.h  nsn_types.h  nsn_zone.h  nsnd.c
src/base/: nsn_memory.c  nsn_memory.h  nsn_os.h  nsn_os_inc.c  nsn_os_inc.h  nsn_os_linux.c  nsn_shm.c  nsn_shm.h  nsn_thread_ctx.h  nsn_types.h
src/common/: nsn_config.c  nsn_config.h  nsn_ipc.h  nsn_log.h  nsn_ringbuf.c  nsn_ringbuf.h  nsn_temp.h  nsn_zone.h
src/libinterception/: libinterception.c
src/libnsn/: libnsn.c
src/nsnd/: nsn_app_inner.c  nsn_app_inner.h  nsn_mm.c  nsn_mm.h  nsnd.c
src/rest/: rest.c  rest.h
tests/: CMakeLists.txt  build.sh  dpdk_0cxm.c  dpdk_perftest.c  ring_rx.c  ring_tx.c  socket_perftest.c  test_dpdk.c  test_dpdk_nolimit.c  test_queue.c  test_queue.h  test_queue_base.c  test_queue_cons.c  test_queue_prod.c  test_rdma.c  test_rte_ring_cons.c  test_rte_ring_prod.cpp  test_socket.c
